--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+    
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "lowdb": "^7.0.1"
+  },
+  "devDependencies": {
+    "esm": "^3.2.25"
   }
 }
