--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-    
+    "start": "node server.js",
+    "seed": "node seed.js",
+    "lire": "node lire.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "lowdb": "^7.0.1"
